personal project_portfolio website

--- a/index.html
+++ b/index.html
@@ -1,9 +1,65 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html>
+
 <head>
+  <meta charset="utf-8" />
+  <title> Helen webpage </title>
+  <style>
+    li {
+      list-style: none;
+      float: right;
+    }
+
+    nav ul li {
+      padding: 5px;
+    }
+
+    .out {
+      width: 100%;
+      text-align: center;
+      border: 1px solid black;
+      height: 580px;
+    }
+
+    .in {
+      display: inline-block;
+      height: 50%;
+      margin-top: 20%;
+      text-align: center;
+      border: 2px solid pink;
+    }
+    input {
+      border: 1px solid black;
+      width: 1cm;
+      height: 1cm;
+      margin-top: 5%;
+      margin-left: 20%;
+      margin-right: 20%;
+      padding: 10px;
+    }
+
+  </style>
 
 </head>
-<body>
 
+<body>
+  <nav>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About me</a></li>
+      <li><a href="#">Work experience</a></li>
+      <li><a href="#">Profile</a></li>
+      <li><a href="#">contact</a></li>
+    </ul>
+  </nav>
+  <div class="out">
+    <div class="in">
+      <h1>Profile</h1>
+      <h2>HYELIN JEONG</h2>
+      <p>"Hello! I'm trade operator in day time, beginner developer at night"</p>
+    </div>
+    <input type="image" value="contact">
+  </div>
 </body>
+
 </html>
