--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta charset="utf-8" />
   <title> Helen webpage </title>
   <style>
+
+    body{
+      background-image: linear-gradient(#cbd0e6, white) ;
+    }
+    img{
+      border-radius: 50%;
+    }
     li {
       list-style: none;
       float: right;
@@ -13,31 +20,28 @@
     nav ul li {
       padding: 5px;
     }
-
     .out {
       width: 100%;
       text-align: center;
-      border: 1px solid black;
-      height: 580px;
+      height: 600px;
     }
 
     .in {
       display: inline-block;
-      height: 50%;
+      height: 30%;
       margin-top: 20%;
       text-align: center;
-      border: 2px solid pink;
     }
+
     input {
       border: 1px solid black;
       width: 1cm;
       height: 1cm;
-      margin-top: 5%;
+      margin-top: 15%;
       margin-left: 20%;
       margin-right: 20%;
       padding: 10px;
     }
-
   </style>
 
 </head>
@@ -54,9 +58,9 @@
   </nav>
   <div class="out">
     <div class="in">
-      <h1>Profile</h1>
-      <h2>HYELIN JEONG</h2>
-      <p>"Hello! I'm trade operator in day time, beginner developer at night"</p>
+      <img src="nini_profile.jpeg">
+      <h1>HYELIN JEONG</h1>
+      <p>"Hello! I'm trader during the day, beginner developer at night"</p>
     </div>
     <input type="image" value="contact">
   </div>
