--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     .out {
       width: auto;
       text-align: center;
-      margin-bottom: auto;
+      margin-bottom: 300px;
     }
 
     .in {
