--- a/nini_webpage/contact.html
+++ b/nini_webpage/contact.html
@@ -26,11 +26,11 @@
     <nav>
         <div class="navigator" style="float:right">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About me</a></li>
-                <li><a href="#">Work experience</a></li>
-                <li><a href="#">Profile</a></li>
-                <li><a href="#">contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about_me.html">About me</a></li>
+                <li><a href="work.html">Work experience</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="contact">contact</a></li>
             </ul>
         </div>
     </nav>
