--- a/easy_tutorials_clone/test1.html
+++ b/easy_tutorials_clone/test1.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="test1.css">
-    </head>
-    <body>
-        <div class="hero">
-            <div class="box1">
-                <h1>Item 1</h1>
-            </div>
-            <div class="box2">
-                <h1>Item 2</h1>
-            </div>
-            <div class="box3">
-                <h1>Item 3</h1>
-            </div>
-            <div class="box4">
-                <h1>Item 4</h1>
-            </div>
-            <div class="box5">
-                <h1>Item5</h1>
-            </div>
+
+<head>
+    <link rel="stylesheet" href="test1.css">
+    <script src="https://kit.fontawesome.com/bc502d85f9.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <div class="hero">
+        <div class="box1">
+            <h1>Item 1</h1>
         </div>
+        <div class="box2">
+            <h1>Item 2</h1>
+        </div>
+        <div class="box3">
+            <h1>Item 3</h1>
+        </div>
+        <div class="box4">
+            <h1>Item 4</h1>
+        </div>
+        <div class="box5">
+            <h1>Item5</h1>
+        </div>
+    </div>
 
+    <div class="container">
+        <i class="fa-solid fa-hourglass-start"></i>
+    </div>
 
-    </body>
+</body>
+
 </html>
