--- a/google_chat_clone/chat.html
+++ b/google_chat_clone/chat.html
@@ -3,34 +3,53 @@
 
 <head>
     <link rel="stylesheet" href="chat.css">
+    <script src="https://kit.fontawesome.com/bc502d85f9.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="container">
         <div class="header">
-            <div class="header_a">a</div>
-            <div class="header_b">b</div>
-            <div class="header_c">c</div>
-            <div class="header_d">d</div>
+            <div class="header_a"><i class="fa-solid fa-bars fa-2x"></i></div>
+            <div class="header_b">
+                <i class="fa-solid fa-message fa-2x" style="color:green"></i>
+            </div>
+            <div class="header_c">
+                <foam action="https://mail.google.com/chat/u/0/#search/" method="get" class="chatting_bar">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <input type="text" placeholder="사용자, 스페이스, 메시지 찾기">
+                </foam>
+            </div>
+            <div class="header_d">
+                <ul class="icons">
+                    <li>활성</li>
+                    <li>활성</li>
+                    <li>활성</li>
+                    <li>활성</li>
+                    <li>활성</li>
+                </ul>
+            </div>
         </div>
         <div class="body">
-            <div class="body_chat">e</div>
-            <div class="body_chat">f</div>
-            <div class="body_chat">g</div>
-            <div class="body_chat">h</div>
-            <div class="body_chat">i</div>
-            <div class="body_chat">j</div>
-            <div class="body_chat">k</div>
-            <div class="body_chat">l</div>
-            <div class="body_chat">m</div>
-            <div class="body_chat">n</div>
-            <div class="body_chat">o</div>
-        </div>
-        <div class="footer">
-            <aside>
-                <div class="footer_p">p</div>
-                <div class="footer_q">q</div>
-            </aside>
+            <div class="body_chat"><i class="fa-solid fa-caret-down"></i></div>
+            <div class="body_chat">채팅</div>
+            <div class="body_chat"><i class="fa-solid fa-plus" style="color:green"></i></div>
+            <div class="body_chat"><i class="fa-regular fa-message fa-3x"></i>
+                <li>대화 없음</li>
+                <li>대화 찾기</li>
+            </div>
+            <div class="body_chat"><i class="fa-solid fa-caret-down"></i></div>
+            <div class="body_chat">스페이스</div>
+            <div class="body_chat"><i class="fa-solid fa-plus" style="color:green"></i></div>
+            <div class="body_chat">
+                <i class="fa-solid fa-box fa-3x"></i>
+                <li>스페이스 없음</li>
+                <li>참여할 스페이스 찾기</li>
+            </div>
+            <div class="body_chat"><i class="fa-solid fa-caret-right"></i></div>
+            <div class="body_chat">영상통화</div>
+            <div class="body_chat"><img src="select_conv.png" width="150"></div>
+            <div class="body_chat">p</div>
+            <div class="body_chat"><i class="fa-solid fa-caret-right"></i></div>
         </div>
 
     </div>
