--- a/google_chat_clone/chat.html
+++ b/google_chat_clone/chat.html
@@ -21,11 +21,16 @@
             </div>
             <div class="header_d">
                 <ul class="icons">
-                    <li>활성</li>
-                    <li>활성</li>
-                    <li>활성</li>
-                    <li>활성</li>
-                    <li>활성</li>
+                    <li style="margin: 0px 10px;">
+                    <button width="30px">
+                    </li>
+                    <li style="margin: 0px 10px;"><i class="fa-solid fa-circle-question fa-2x" style="color:gray"></i>
+                    </li>
+                    <li style="margin: 0px 10px;"><i class="fa-solid fa-gear fa-2x" style="color:gray"></i></li>
+                    <li style="margin: 0px 10px;"><i class="fa-solid fa-grip fa-2x" style="color:gray"></i></li>
+                    <li style="margin: 0px 10px;"><img
+                            src="https://lh3.googleusercontent.com/a-/AOh14Ggy_9G2Y5Yobs2ZU1RKWiq13tJCm52ENaHY7gSHcKM=s192-c-rg-br100"
+                            width="30px" height="30px"> </li>
                 </ul>
             </div>
         </div>
