--- a/google_chat_clone/chat.html
+++ b/google_chat_clone/chat.html
@@ -21,9 +21,13 @@
             </div>
             <div class="header_d">
                 <ul class="icons">
-                    <li style="margin: 0px 10px;">
-                    <button width="30px">
-                    </li>
+                    <form>
+                        <button id="activate">
+                            <i class="fa-solid fa-circle" style="color:green"></i>
+                            <span>활성</span>
+                            <i class="fa-solid fa-caret-down"></i>
+                        </button>
+                    </form>
                     <li style="margin: 0px 10px;"><i class="fa-solid fa-circle-question fa-2x" style="color:gray"></i>
                     </li>
                     <li style="margin: 0px 10px;"><i class="fa-solid fa-gear fa-2x" style="color:gray"></i></li>
@@ -53,7 +57,14 @@
             <div class="body_chat"><i class="fa-solid fa-caret-right"></i></div>
             <div class="body_chat">영상통화</div>
             <div class="body_chat"><img src="select_conv.png" width="150"></div>
-            <div class="body_chat">p</div>
+            <div class="body_chat">
+                <ul>
+                    <div><i class="fa-regular fa-calendar fa-2x"></i></div>
+                    <div><i class="fa-regular fa-lightbulb fa-2x"></i></div>
+                    <div><i class="fa-regular fa-square-check fa-2x"></i></div>
+                    <div><i class="fa-regular fa-user fa-2x"></i></div>
+                </ul>
+            </div>
             <div class="body_chat"><i class="fa-solid fa-caret-right"></i></div>
         </div>
 
