--- a/google_chat_clone/chat.html
+++ b/google_chat_clone/chat.html
@@ -42,9 +42,12 @@
             <div class="body_chat"><i class="fa-solid fa-caret-down"></i></div>
             <div class="body_chat">채팅</div>
             <div class="body_chat"><i class="fa-solid fa-plus" style="color:green"></i></div>
-            <div class="body_chat"><i class="fa-regular fa-message fa-3x"></i>
-                <li>대화 없음</li>
-                <li>대화 찾기</li>
+            <div class="body_chat">
+                <div class="test">
+                    <i class="fa-regular fa-message fa-3x"></i>
+                    대화 없음 <br>
+                    <span>대화 찾기</span>
+                </div>
             </div>
             <div class="body_chat"><i class="fa-solid fa-caret-down"></i></div>
             <div class="body_chat">스페이스</div>
