220418 dividing sectioin & adding body article

--- a/2022.04.17/0417.html
+++ b/2022.04.17/0417.html
@@ -3,21 +3,22 @@
 
 <head>
     <link rel="stylesheet" href="0417.css">
+    <meta charset="utf-8">
 </head>
 
 <body>
     <header>
-        <div class="container">
-            <div class="box">
+        <div class="header_container">
+            <div class="header_container_box">
                 <form>
-                    <button class="logo">
+                    <button class="header_container_box_logo">
                         <i class="fa-regular fa-circle"></i>St
                     </button>
                 </form>
                 <h2><strong>stoodia</strong></h2>
             </div>
 
-            <div class="box">
+            <div class="header_container_box">
                 <div class="nav">
                     <li>About us</li>
                     <li>Portfolio</li>
@@ -27,7 +28,7 @@
 
             </div>
 
-            <div class="box">
+            <div class="header_container_box">
                 <li>+1 234 721 666</li>
                 <i class="fa-solid fa-circle-notch"></i>
                 <li>Contact</li>
@@ -36,14 +37,19 @@
     </header>
 
     <main>
-        <div class="main_container">
-
-
-
-
+        <div class="main_containers">
+            <div class="main_containers_box">
+                <div class="main_containers_box_article">
+                    <p>doesn't matter what building it is, our goal is giving you nest experience and value in renting our curated villas, homestay and hotels</p>
+                </div>
+                <div class="main_containers_box_article">
+                    <h1>We provide vacation place that makes you feel like at your own home</h1>
+                </div>
+            </div>
+            <div class="main_containers_box"></div>
+            <div class="main_containers_box"></div>
+            <div class="main_containers_box"></div>
         </div>
-
-
     </main>
 </body>
 
