--- a/2022.04.17/0417.html
+++ b/2022.04.17/0417.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="0417.css">
+    <script src="https://kit.fontawesome.com/bc502d85f9.js" crossorigin="anonymous"></script>
     <meta charset="utf-8">
 </head>
 
@@ -12,7 +13,7 @@
             <div class="header_container_box">
                 <form>
                     <button class="header_container_box_logo">
-                        <i class="fa-regular fa-circle"></i>St
+                        St
                     </button>
                 </form>
                 <h2><strong>stoodia</strong></h2>
@@ -30,7 +31,7 @@
 
             <div class="header_container_box">
                 <li>+1 234 721 666</li>
-                <i class="fa-solid fa-circle-notch"></i>
+                <i class="fa-solid fa-circle"></i>
                 <li>Contact</li>
             </div>
         </div>
@@ -40,7 +41,8 @@
         <div class="main_containers">
             <div class="main_containers_box">
                 <div class="main_containers_box_article">
-                    <h3>doesn't matter what building it is, our goal is giving you nest experience and value in renting our curated villas, homestay and hotels</h3>
+                    <h3>doesn't matter what building it is, our goal is giving you nest experience and value in renting
+                        our curated villas, homestay and hotels</h3>
                 </div>
                 <div class="main_containers_box_article">
                     <p>We provide vacation place that makes you feel like at your own home</p>
@@ -49,10 +51,40 @@
                 </div>
             </div>
             <div class="main_containers_box">
-                    <iframe width="100%" height="300px" src="https://www.youtube.com/embed/Nep1qytq9JM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="100%" height="300px" src="https://www.youtube.com/embed/Nep1qytq9JM"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
             </div>
-            <div class="main_containers_box"></div>
-            <div class="main_containers_box"></div>
+            <div class="main_containers_box">
+                <ul>
+                    <li id="small_headline">//benefits for you</li><br>
+                    <li id="headline"><strong>We provide this expert solutions for <br>your vacation matters</strong>
+                    </li>
+                </ul>
+            </div>
+            <div class="main_containers_box">
+                <div class="flag">
+                    <li>깃발</li>
+                    <li>Well curated places</li>
+                    <li>doesn't matter what building it is, our goal is giving you nest experience and value in renting
+                        our curated villas, homestay and hotels</li>
+                    <li>*Every options we provide is best of best</li>
+                    <li>*All of it is our best 'hidden gems'</li>
+                    <li>*Easy to access</li>
+                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    <span></i>LEARN MORE</span>
+                </div>
+                <div class="thumb_print">
+                    <li>Safest Transaction</li>
+                    <li>Will royalties in the company do instead of cash the hair is just too polarising for do less with more always try making it a bit less blah</li>
+                    <li>*we exceed the clients' expectations</li>
+                    <li>*submit your meaningless business jargon to you</li>
+                    <li>*pay you in a week we don't need to pay upfront</li>
+                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    <span></i>LEARN MORE</span>
+                </div>
+            </div>
         </div>
     </main>
 </body>
