copying_website_finish

--- a/2022.04.17/0417.html
+++ b/2022.04.17/0417.html
@@ -41,8 +41,8 @@
         <div class="main_containers">
             <div class="main_containers_box">
                 <div class="main_containers_box_article">
-                    <h3>doesn't matter what building it is, our goal is giving you nest experience and value in renting
-                        our curated villas, homestay and hotels</h3>
+                    <h4>doesn't matter what building it is, our goal is giving you nest experience and value in renting
+                        our curated villas, homestay and hotels</h4>
                 </div>
                 <div class="main_containers_box_article">
                     <p>We provide vacation place that makes you feel like at your own home</p>
@@ -65,24 +65,45 @@
             </div>
             <div class="main_containers_box">
                 <div class="flag">
-                    <li>깃발</li>
-                    <li>Well curated places</li>
+                    <i class="fa-solid fa-flag fa-2x"></i>
+                    <h2>Well curated places</h2>
                     <li>doesn't matter what building it is, our goal is giving you nest experience and value in renting
                         our curated villas, homestay and hotels</li>
                     <li>*Every options we provide is best of best</li>
                     <li>*All of it is our best 'hidden gems'</li>
                     <li>*Easy to access</li>
-                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                    <span></i>LEARN MORE</span>
+                    <br>
+                    <div>
+                        <i class="fa-solid fa-arrow-trend-up"></i>
+                        <span>LEARN MORE</span>
+                    </div>
                 </div>
                 <div class="thumb_print">
-                    <li>Safest Transaction</li>
+                    <i class="fa-solid fa-fingerprint fa-2x"></i>
+                    <h2>Safest Transaction</h2>
                     <li>Will royalties in the company do instead of cash the hair is just too polarising for do less with more always try making it a bit less blah</li>
                     <li>*we exceed the clients' expectations</li>
                     <li>*submit your meaningless business jargon to you</li>
                     <li>*pay you in a week we don't need to pay upfront</li>
-                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                    <span></i>LEARN MORE</span>
+                    <br>
+                    <div>
+                        <i class="fa-solid fa-arrow-trend-up"></i>
+                        <span>LEARN MORE</span>
+                    </div>
+                </div>
+                <div class="hand_waving">
+                    <i class="fa-solid fa-hands-clapping fa-2x"></i>
+                    <h2>One guest get one guide</h2>
+                    <li>doesn't matter what building it is, our goal is giving you nest experience and value in renting
+                        our curated villas, homestay and hotels</li>
+                    <li>*Professionals guides that will help you</li>
+                    <li>*All of it is our best 'hidden gems'</li>
+                    <li>*Submit your meaningless business jargon to you</li>
+                    <br>
+                    <div>
+                        <i class="fa-solid fa-arrow-trend-up"></i>
+                        <span>LEARN MORE</span>
+                    </div>
                 </div>
             </div>
         </div>
