220424 개인 웹사이트 수정

--- a/nini_webpage/about_me.html
+++ b/nini_webpage/about_me.html
@@ -1,56 +1,38 @@
 <!DOCTYPE html>
 <html>
-<meta charset="utf-8">
 
 <head>
-    <style>
-        li {
-            list-style: none;
-            float: right;
-            transform: rotate(180deg);
-            height: 0px;
-        }
-
-        nav ul li {
-            padding: 5px;
-        }
-
-        .navigator {
-            transform: rotate(180deg);
-        }
-    </style>
-
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
+    <link rel="stylesheet" href="about_me.css">
+    <script src="https://kit.fontawesome.com/bc502d85f9.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <nav>
-        <div class="navigator" style="float:right">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about_me.html">About me</a></li>
-                <li><a href="work.html">Work experience</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact">contact</a></li>
-            </ul>
+    <div class="body_outter">
+      <div class="container1">
+        <nav class="navigator">
+          <div class="menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about_me.html">About me</a></li>
+            <li><a href="work.html">Work experience</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="contact">contact</a></li>
+          </div>
+        </nav>
+      </div>
+      <div class="container2">
+        <div class="box_1">
+            <img class="helen" src="nini_profile.jpeg">
+            <h1>HEYLIN JEONG</h1>
+            <h2>1993.Jan.05</h2>
+            <h3>"Hello! I'm trader during the day, beginner developer at night"</h3>
         </div>
-    </nav>
-    <div class="personal_info">
-        <h1>HYELIN JEONG</h1>
-        <h3>1993.Jan.05</h3>
-        <p>Trader during the day, beginner developer at night</p>
-    </div>
-    <div class="main_about_me">
-        <h1>EDUCATION</h1>
-        <a href="      "></a>
-        <br>
-        <br>
-        <br>
-        <h1>INTEREST</h1>
-        <h2>1. Coding</h2>
-        <h2>2. Procurement</h2>
-        <h2>3. Reading</h2>
-    </div>
+        <div class="box_2">
 
-</body>
+        </div>
+      </div>
+    </div>
+  </body>
 
 </html>
