--- a/nini_webpage/index.html
+++ b/nini_webpage/index.html
@@ -6,26 +6,30 @@
   <title> Helen webpage </title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
   <link rel="stylesheet" href="index.css">
+  <script src="https://kit.fontawesome.com/bc502d85f9.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <nav class="container">
-    <div class="navigator">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about_me.html">About me</a></li>
-        <li><a href="work.html">Work experience</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="contact">contact</a></li>
+  <div class="body_outter">
+    <div class="container1">
+      <nav class="navigator">
+        <div class="menu">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about_me.html">About me</a></li>
+          <li><a href="work.html">Work experience</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact">contact</a></li>
+        </div>
+      </nav>
     </div>
-  </nav>
-  <div class="out">
-    <div class="in">
-      <img class="helen" src="nini_profile.jpeg">
-      <h1 style="font-size:6vw">HYELIN JEONG</h1>
+    <div class="container2">
+      <div class="container_float">
+        <section><h1 style="font-size:6vw">HYELIN</h1></section>
+        <img class="helen" src="nini_profile.jpeg">
+        <section><h1 style="font-size:6vw">JEONG</h1></section>
+      </div>
       <h3>"Hello! I'm trader during the day, beginner developer at night"</h3>
-      <img class="phone"
-        src="https://mblogthumb-phinf.pstatic.net/MjAxNzAyMDdfMjA1/MDAxNDg2NDc4MTc5MDk1.27q-I6pRVgZWgkCbbXVMouQj7serCkYdE-5VJGW3NbQg.O8oj22x7STvIoL7jI5dsVf-pGjuIGRT2qXKlVb1hooMg.PNG.koowq/%25EC%25A0%2584%25ED%2599%2594%25EA%25B8%25B0_%25EC%259B%2590%25ED%2598%2595_%25EC%258B%25AC%25ED%2594%258C%25EC%2595%2584%25EC%259D%25B4%25EC%25BD%2598-06.png?type=w800"
-        width="70">
+      <a href="contact"><i class="fa-solid fa-phone fa-2x"></i></a>
     </div>
   </div>
 </body>
