220426 personal webpage update

--- a/nini_webpage/about_me.html
+++ b/nini_webpage/about_me.html
@@ -17,7 +17,7 @@
             <li><a href="about_me.html">About me</a></li>
             <li><a href="work.html">Work experience</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="contact">contact</a></li>
+            <li><a href="contact.html">contact</a></li>
           </div>
         </nav>
       </div>
@@ -25,11 +25,22 @@
         <div class="box_1">
             <img class="helen" src="nini_profile.jpeg">
             <h1>HEYLIN JEONG</h1>
-            <h2>1993.Jan.05</h2>
-            <h3>"Hello! I'm trader during the day, beginner developer at night"</h3>
+            <h3>1993.Jan.05</h3>
+            <h3>Hello! I'm trader during the day, beginner developer at night</h3>
         </div>
         <div class="box_2">
-
+          <div class="education">
+            <h1>EDUCATION</h1>
+            <h2>Indian Studies | Bachelor | Hanguk University of Foreign Studies</h2>
+            <li>1st major: Indian studies</li>
+            <li>double major: English Literature and Translation</li>
+          </div>
+          <div class="interest">
+            <h1>INTEREST</h1>
+            <li>1. Coding</li>
+            <li>2. Procurement</li>
+            <li>3. Reading</li>
+          </div>
         </div>
       </div>
     </div>
