--- a/nini_webpage/contact.html
+++ b/nini_webpage/contact.html
@@ -1,41 +1,42 @@
 <!DOCTYPE html>
 <html>
-<meta charset="utf-8">
 
 <head>
-    <style>
-        li {
-            list-style: none;
-            float: right;
-            transform: rotate(180deg);
-            height: 0px;
-        }
-
-        nav ul li {
-            padding: 5px;
-        }
-
-        .navigator {
-            transform: rotate(180deg);
-        }
-    </style>
-
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
+    <link rel="stylesheet" href="contact.css">
+    <script src="https://kit.fontawesome.com/bc502d85f9.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <nav>
-        <div class="navigator" style="float:right">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about_me.html">About me</a></li>
-                <li><a href="work.html">Work experience</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact">contact</a></li>
-            </ul>
+    <div class="body_outter">
+        <div class="container1">
+            <nav class="navigator">
+                <div class="menu">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about_me.html">About me</a></li>
+                    <li><a href="work.html">Work experience</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">contact</a></li>
+                </div>
+            </nav>
         </div>
-    </nav>
-
-
+        <div class="container2">
+            <div class="box_1">
+                <div class="contact">
+                    <img class="helen" src="nini_profile.jpeg">
+                    <h1>Contact</h1>
+                </div>
+            </div>
+            <div class="box_2">
+                <div class="contact_link"><a href="#">Blog</a></div>
+                <div class="contact_link"><a href="#">Linkedin</a></div>
+                <div class="contact_link"><a href="#">Youtube</a></div>
+                <div class="contact_link"><a href="#">Email</a></div>
+            </div>
+        </div>
+    </div>
+    </div>
 </body>
 
 </html>
