--- a/nini_webpage/index.html
+++ b/nini_webpage/index.html
@@ -18,17 +18,21 @@
           <li><a href="about_me.html">About me</a></li>
           <li><a href="work.html">Work experience</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="contact">contact</a></li>
+          <li><a href="contact.html">contact</a></li>
         </div>
       </nav>
     </div>
     <div class="container2">
       <div class="container_float">
-        <section><h1 style="font-size:6vw">HYELIN</h1></section>
+        <section>
+          <h1 style="font-size:6vw">HYELIN</h1>
+        </section>
         <img class="helen" src="nini_profile.jpeg">
-        <section><h1 style="font-size:6vw">JEONG</h1></section>
+        <section>
+          <h1 style="font-size:6vw">JEONG</h1>
+        </section>
       </div>
-      <h3>"Hello! I'm trader during the day, beginner developer at night"</h3>
+      <h2>"Hello! I'm trader during the day, beginner developer at night"</h2>
       <a href="contact"><i class="fa-solid fa-phone fa-2x"></i></a>
     </div>
   </div>
