--- a/nini_webpage/work.html
+++ b/nini_webpage/work.html
@@ -1,41 +1,70 @@
 <!DOCTYPE html>
 <html>
-<meta charset="utf-8">
 
 <head>
-    <style>
-        li {
-            list-style: none;
-            float: right;
-            transform: rotate(180deg);
-            height: 0px;
-        }
-
-        nav ul li {
-            padding: 5px;
-        }
-
-        .navigator {
-            transform: rotate(180deg);
-        }
-    </style>
-
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
+    <link rel="stylesheet" href="work.css">
+    <script src="https://kit.fontawesome.com/bc502d85f9.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <nav>
-        <div class="navigator" style="float:right">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about_me.html">About me</a></li>
-                <li><a href="work.html">Work experience</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact">contact</a></li>
-            </ul>
+    <div class="body_outter">
+        <div class="container1">
+            <nav class="navigator">
+                <div class="menu">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about_me.html">About me</a></li>
+                    <li><a href="work.html">Work experience</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">contact</a></li>
+                </div>
+            </nav>
         </div>
-    </nav>
+        <div class="container2">
+            <div class="box_1">
+                <div class="experience">
+                    <img class="helen" src="nini_profile.jpeg">
+                    <h1>Work experience</h1>
+                    <br>
+                    <h3>Resume URL</h3>
+                    <i class="fa-solid fa-download fa-2x"></i>
+                    <a href="#">Download</a>
+                </div>
+            </div>
+            <div class="box_2">
+                <div class="Ingang">
+                    <h1>Ingnag Audio Co.,Ltd. / 2020.06 -</h1>
+                    <h2>My main roles:</h2>
+                    <li>- Monitor inventory levels while managing the ordering and receipt of products</li>
+                    <li>- Review daily purchase orders, invoices, and maintain accurate record-keeping</li>
+                    <li>- Helped team members with various duties in the warehouse as needed</li>
+                    <li>- Developed detailed logistics schedules and coordinated shipments to ensure that everything was
+                        delivered in a timely manner.</li>
+                </div>
+                <div class="Chunyang">
+                    <h1>Chunyang Freight Forwarder / 2019.11 - 2020.01</h1>
+                    <h2>My main roles:</h2>
+                    <li>- Monitor the company's day to day operations with attention to the order processing and
+                        execution</li>
+                    <li>- Supported the Logistics manager with various tasks as required and managed and maintained
+                        relevant documents and records.</li>
+                    <li>- Responsible for customer's day to day requirements, reporting and problem solving</li>
+                    <li>- Document B/L and ensure to be in compliance with customs rules and regulations</li>
+                </div>
 
-
+                <div class="InterAsia">
+                    <h1>InterAsia Lines Korea / 2015.12 - 2018.03</h1>
+                    <h2>My main roles:</h2>
+                    <li>- Supported the Logistics manager with various tasks as required and managed and maintained
+                        relevant documents and records.</li>
+                    <li>- Responsible for customer's day to day requirements, reporting and problem solving</li>
+                    <li>- Document B/L and ensure to be in compliance with customs rules and regulations</li>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
 </body>
 
 </html>
