changed index nav bar

--- a/nini_webpage/index.html
+++ b/nini_webpage/index.html
@@ -7,20 +7,22 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
   <link rel="stylesheet" href="index.css">
   <script src="https://kit.fontawesome.com/bc502d85f9.js" crossorigin="anonymous"></script>
+  <script src="nav.js" defer></script>
 </head>
 
 <body>
   <div class="body_outter">
     <div class="container1">
       <nav class="navigator">
-        <div class="menu">
+        <ul class="menu">
           <li><a href="index.html">Home</a></li>
           <li><a href="about_me.html">About me</a></li>
           <li><a href="work.html">Work experience</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="contact.html">contact</a></li>
-        </div>
+        </ul>
       </nav>
+      <a href="#" class="container_float_togglebtn"><i class="fa-solid fa-bars"></i></a>
     </div>
     <div class="container2">
       <div class="container_float">
@@ -32,7 +34,7 @@
           <h1 style="font-size:6vw">JEONG</h1>
         </section>
       </div>
-      <h2>"Hello! I'm trader during the day, beginner developer at night"</h2>
+      <h2 style="font-size:2vw">"Hello! I'm trader during the day, beginner developer at night"</h2>
       <a href="contact"><i class="fa-solid fa-phone fa-2x"></i></a>
     </div>
   </div>
